# ckb-alchemist

./: .prettierrc  Cargo.toml  PLAN.md  README.md  check.sh  ckb-alchemist-5c6acf92f663a41d.js  ckb-alchemist-5c6acf92f663a41d_bg.wasm  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  rust.yml
assets/: manifest.json  sw.js
src/: App.svelte  app.css  app.rs  lib.rs  main.rs  main.ts
src/components/canvas/: AlchemistConnectionLine.svelte  Canvas.svelte
src/components/edges/: AlchemistEdge.svelte
src/components/nodes/: AlchemistNode.svelte  ParamField.svelte  RpcNode.svelte
src/components/panels/: BootDialog.svelte  ErrorBanner.svelte  Palette.svelte  SharePanel.svelte  TextPanel.svelte  TopBar.svelte
src/lib/ckb/: hash.ts  hex.ts  index.ts  script.ts
src/lib/engine/: eval.ts  graph.ts  index.ts  validate.ts
src/lib/nodes/: index.ts  registry.ts  rpc-methods.ts  seed.ts  spec.ts  types.ts
src/lib/nodes/specs/: address.ts  cell.ts  ckb-hash.ts  ckb-structs.ts  concat.ts  conversion.ts  dao-calculator.ts  (+13 more)
src/lib/persistence/: boot.ts  codec.ts  index.ts  mirror.svelte.ts  save-html.ts  schema.ts  storage.ts
src/lib/store/: banner.svelte.ts  graph.svelte.ts  index.ts  rpc.svelte.ts  session.svelte.ts  theme.svelte.ts  ui.svelte.ts
src/widgets/: ckb_hash.rs  concat.rs  mod.rs  script.rs  slice.rs  utils.rs
tests/ckb/: parity.test.ts
tests/engine/: advanced.test.ts  eval.test.ts
tests/nodes/: new-nodes.test.ts
tests/persistence/: codec.test.ts  mirror.test.ts
